--- a/.github/workflows/main_frontend-app-eus2-nnu.yml
+++ b/.github/workflows/main_frontend-app-eus2-nnu.yml
@@ -9,6 +9,11 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: frontend-app-eus2-nnu   # set this to your application's name
+  NODE_VERSION: '18.x'                # set this to the node version to use
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+
 jobs:
   build:
     runs-on: ubuntu-latest
